# dims_of_tmos

./: README.md  main.py  pyproject.toml
dims_of_tmos/: __init__.py  intro_diagram.py  main.py  model.py  train.py
dims_of_tmos/feature_geometry/: analysis.py  feature_geom_train.py  helpers.py  vis.py
dims_of_tmos/legacy/: features_across_sparsities.py  intro_diagram.py  main.py
