[tool.poetry]
name = "dims-of-tmos"
version = "0.1.0"
description = "An exploration into higher dimensional clusters in the Toy Models of Superposition setup"
authors = ["Kola Ayonrinde <koayon@gmail.com>"]
license = "MIT"
readme = "README.md"

packages = [
    { include = "dims_of_tmos" },
]

[tool.poetry.dependencies]
python = "^3.10"
einops = "^0.8.0"
loguru = "^0.7.2"
matplotlib = ">=3.8.0,<3.9.0"
pandas = "*"
plotly = ">=5.17.0,<5.23.0"
torch = ">=2.1.0,<2.3.0"
tqdm = ">=4.66.1,<4.67.0"
seaborn = "^0.13.2"
collectibles = "^0.1.5"
nbformat = "^5.10.4"
scikit-learn = "1.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
mypy = "^1.10.0"
tox = "^4.15.1"
ipykernel = "^6.29.5"
ipython = "^8.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
